ninja fix typo in Jenkinsfile

--- a/.jenkins/Jenkinsfile
+++ b/.jenkins/Jenkinsfile
@@ -158,7 +158,7 @@ pipeline {
                 always {
                     warnError('missing test xml files') {
                         script {
-                            copyTestResults('cqlsh-test', cqlsh.getNumber())
+                            copyTestResults('cqlsh-tests', cqlsh.getNumber())
                         }
                     }
                 }
