Correct size unit to mebibypes

--- a/conf/cassandra.yaml
+++ b/conf/cassandra.yaml
@@ -86,7 +86,7 @@ hints_flush_period: 10000ms
 # Maximum size for a single hints file, in megabytes.
 max_hints_file_size: 128MiB
 
-# The file size limit to store hints for an unreachable host, in megabytes.
+# The file size limit to store hints for an unreachable host, in mebibytes.
 # Once the local hints files have reached the limit, no more new hints will be created.
 # Set a non-positive value will disable the size limit.
 # max_hints_size_per_host: 0MiB
