--- a/build.xml
+++ b/build.xml
@@ -670,6 +670,9 @@
           </dependency>
           <dependency groupId="org.hamcrest" artifactId="hamcrest" version="2.2" scope="test"/>
           <dependency groupId="com.github.seancfoley" artifactId="ipaddress" version="5.3.3" />
+          <dependency groupId="org.agrona" artifactId="agrona" version="0.9.26" />
+          <dependency groupId="org.apache.lucene" artifactId="lucene-core" version="7.5.0" />
+          <dependency groupId="org.apache.lucene" artifactId="lucene-analyzers-common" version="7.5.0" />
         </dependencyManagement>
         <developer id="adelapena" name="Andres de la Peña"/>
         <developer id="alakshman" name="Avinash Lakshman"/>
@@ -752,6 +755,9 @@
         <!-- coverage debs -->
         <dependency groupId="org.jacoco" artifactId="org.jacoco.agent"/>
         <dependency groupId="org.jacoco" artifactId="org.jacoco.ant"/>
+
+        <dependency groupId="org.apache.lucene" artifactId="lucene-core"/>
+        <dependency groupId="org.apache.lucene" artifactId="lucene-analyzers-common"/>
       </artifact:pom>
 
       <!-- now the pom's for artifacts being deployed to Maven Central -->
@@ -836,6 +842,9 @@
         <dependency groupId="javax.inject" artifactId="javax.inject"/>
         <dependency groupId="com.google.j2objc" artifactId="j2objc-annotations"/>
         <dependency groupId="org.hdrhistogram" artifactId="HdrHistogram"/>
+        <dependency groupId="org.agrona" artifactId="agrona"/>
+        <dependency groupId="org.apache.lucene" artifactId="lucene-core"/>
+        <dependency groupId="org.apache.lucene" artifactId="lucene-analyzers-common"/>
 
         <!-- sasi deps -->
         <dependency groupId="de.jflex" artifactId="jflex" />
