test_copyutil.py: resolve with too many open files when ulimit is 256 with close cassconnect.py: resolve DeprecationWarning: Legacy execution parameters sslhandling.py: resolve DeprecationWarning: The SafeConfigParser class has been renamed to ConfigParser remove unused reference to nosetests.xml in Jenkinsfile

--- a/.jenkins/Jenkinsfile
+++ b/.jenkins/Jenkinsfile
@@ -337,7 +337,7 @@ pipeline {
           sh "rm -fR cassandra-builds"
           sh "git clone --depth 1 --single-branch https://gitbox.apache.org/repos/asf/cassandra-builds.git"
           sh "./cassandra-builds/build-scripts/cassandra-test-report.sh"
-          junit testResults: '**/build/test/**/TEST*.xml,**/cqlshlib.xml,**/nosetests.xml', testDataPublishers: [[$class: 'StabilityTestDataPublisher']]
+          junit testResults: '**/build/test/**/TEST*.xml,**/cqlshlib.xml', testDataPublishers: [[$class: 'StabilityTestDataPublisher']]
 
           // the following should fail on any installation other than ci-cassandra.apache.org
           //  TODO: keep jenkins infrastructure related settings in `cassandra_job_dsl_seed.groovy`
